[workspace]
members = [
    ".",
    "crate/iotg-core",
    "crate/iotg-iec104",
    "crate/iotg-modbus",
    "crate/iotg-dlt645",
    "crate/iotg-s7",
    "crate/iotg-hj212",
    "crate/iotg-mqtt",
]
resolver = "3"

[workspace.dependencies]
log = "0.4.29"
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = "4.6.0"
async-trait = "0.1.89"
tracing = "0.1.44"
chrono = "0.4.44"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
tokio = "1.51.1"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
bytes = "1.11.1"
hex = "0.4.3"
rumqttc = "0.25.1"

wheel-rs = "1.5.0"
robotech = "1.5.1"

iotg-core = { path = "crate/iotg-core" }
iotg-iec104 = { path = "crate/iotg-iec104" }
iotg-modbus = { path = "crate/iotg-modbus" }
iotg-dlt645 = { path = "crate/iotg-dlt645" }
iotg-s7 = { path = "crate/iotg-s7" }
iotg-hj212 = { path = "crate/iotg-hj212" }
iotg-mqtt = { path = "crate/iotg-mqtt" }

#[patch.crates-io]
#wheel-rs = { path = "../../wheel-rs" }
#robotech = { path = "../../robotech-rs/robotech" }
#robotech-macros = { path = "../../robotech-rs/robotech-macros" }

[package]
name = "iot-gatex"
version = "1.0.0"
edition = "2024"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

robotech = { workspace = true, features = ["macros", "app"] }

iotg-core = { workspace = true }
iotg-iec104 = { workspace = true }
iotg-modbus = { workspace = true }
iotg-dlt645 = { workspace = true }
iotg-s7 = { workspace = true }
iotg-hj212 = { workspace = true }
iotg-mqtt = { workspace = true }
