[workspace]
members = [
    ".",
    "crate/iotg-core",
    "crate/iotg-iec104",
    "crate/iotg-modbus",
    "crate/iotg-dlt645",
    "crate/iotg-s7",
    "crate/iotg-hj212",
    "crate/iotg-mqtt",
]
resolver = "3"

[workspace.dependencies]
log = "0.4.33"
tracing = "0.1.44"
anyhow = "1.0.103"
thiserror = "2.0.18"
clap = "4.6.1"
async-trait = "0.1.89"
chrono = "0.4.45"
serde = "1.0.228"
serde_json = "1.0.150"
serde_with = "3.21.0"
tokio = "1.52.3"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
bytes = "1.12.0"
hex = "0.4.3"
rumqttc = "0.25.1"
num_enum = "0.7.6"
notify-debouncer-mini = "0.7.0"

wheel-rs = "1.8.1"
robotech = "1.7.5"

iotg-core = { path = "crate/iotg-core" }
iotg-iec104 = { path = "crate/iotg-iec104" }
iotg-modbus = { path = "crate/iotg-modbus" }
iotg-dlt645 = { path = "crate/iotg-dlt645" }
iotg-s7 = { path = "crate/iotg-s7" }
iotg-hj212 = { path = "crate/iotg-hj212" }
iotg-mqtt = { path = "crate/iotg-mqtt" }

# 用cross build构建时要把下面的节点注释起来才能编译，否则会报robotech的依赖错误
#[patch.crates-io]
#wheel-rs = { path = "../../wheel-rs" }
#robotech = { path = "../../robotech-rs/robotech" }
#robotech-macros = { path = "../../robotech-rs/robotech-macros" }

[package]
name = "iot-gatex"
version = "1.0.0"
edition = "2024"

[dependencies]
log = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
notify-debouncer-mini = { workspace = true }

wheel-rs = { workspace = true }
robotech = { workspace = true, features = ["macros", "app"] }

iotg-core = { workspace = true }
iotg-iec104 = { workspace = true }
iotg-modbus = { workspace = true }
iotg-dlt645 = { workspace = true }
iotg-s7 = { workspace = true }
iotg-hj212 = { workspace = true }
iotg-mqtt = { workspace = true }

