[package]
name = "iot-svr"
version = "1.0.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10.81", features = ["vendored"] }
openssl-sys = { version = "0.9.117", features = ["vendored"] }
native-tls = { version = "0.2.18", features = ["vendored"] }

tracing = "0.1.44"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.30"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.21.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
regex = "1.12.4"
notify-debouncer-mini = "0.7.0"
futures = "0.3.32"
typed-builder = { version = "0.23.2" }
derive_setters = "0.1.9"

rumqttc = "0.25.1"
influxdb = "0.8.0"


robotech = { version = "1.8.0", features = ["app", "mqtt", "influxdb", "macros"] }
wheel-rs = "1.8.1"

# 用cross build构建时要把下面的节点注释起来才能编译，否则会报robotech的依赖错误
[patch.crates-io]
wheel-rs = { path = "../../../rusthing/wheel-rs" }
robotech = { path = "../../../rusthing/robotech-rs/robotech" }
robotech-macros = { path = "../../../rusthing/robotech-rs/robotech-macros" }
