[package]
name = "iotg-core"
version = "1.0.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
derive_setters = { workspace = true }
typed-builder = { workspace = true }

wheel-rs = { workspace = true }
