[package]
name    = "iotg-mqtt"
version = "1.0.0"
edition = "2024"

[dependencies]
iotg-core  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
rumqttc    = { workspace = true }
hex        = { workspace = true }
