[package]
name = "iotg-mqtt"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
rumqttc = { workspace = true }
strum = { workspace = true, features = ["derive"] }

iotg-core = { workspace = true }

wheel-rs = { workspace = true }
